--- a/actions/action1/index.html
+++ b/actions/action1/index.html
@@ -63,8 +63,8 @@
 	function touchBegan() {
 		if (!started) {
 			started = true
-			loadSequence()
 			parent.tool3cose(); 
+			loadSequence();
 		}
 
 		event.stopPropagation();
